WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103009
It should be possible to say dataLog("count = ", count, "\n") instead of dataLogF("count = %d\n", count)
https://bugs.webkit.org/show_bug.cgi?id=103009
Summary
It should be possible to say dataLog("count = ", count, "\n") instead of data...
Filip Pizlo
Reported
2012-11-21 19:22:23 PST
And we should also be able to provide overloads for logging objects by just overloading some print() function.
Attachments
WRONG PATCH
(43.56 KB, patch)
2012-11-21 20:11 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(21.40 KB, patch)
2012-11-28 00:58 PST
,
Filip Pizlo
msaboff
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-11-21 20:11:44 PST
Created
attachment 175572
[details]
WRONG PATCH
Filip Pizlo
Comment 2
2012-11-21 20:12:34 PST
Comment on
attachment 175572
[details]
WRONG PATCH Ooops. I posted this to the wrong bug. :-/
Filip Pizlo
Comment 3
2012-11-28 00:58:01 PST
Created
attachment 176419
[details]
the patch For reals this time.
Filip Pizlo
Comment 4
2012-11-28 15:04:19 PST
Landed in
http://trac.webkit.org/changeset/136066
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug