Source/JavaScriptCore/dfg/DFGStructureAbstractValue.h
@@ -301,14 +301,14 @@ public:
     void dump(PrintStream& out) const
     {
         if (isTop()) {
-            out.printf("TOP");
+            out.print("TOP");
             return;
         }
         
-        out.printf("[");
+        out.print("[");
         if (m_structure)
-            out.printf("%p", m_structure);
-        out.printf("]");
+            out.print(RawPointer(m_structure));
+        out.print("]");
     }
 
 private:
@@ -319,6 +319,15 @@ private:
 };
 
 } } // namespace JSC::DFG
+
+namespace WTF {
+
+inline void printInternal(PrintStream& out, const JSC::DFG::StructureAbstractValue& value)
+{
+    value.dump(out);
+}
+
+} // namespace WTF
 
 #endif // ENABLE(DFG_JIT)
 
